Fixed navbar gap for Safari

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,6 +27,7 @@
 
 .nav-link {
   text-align: center;
+  margin: 0 20px;
 }
 
 .nav-link a {
@@ -53,7 +54,6 @@
 .nav-links {
   display: flex;
   align-items: center;
-  gap: 40px;
 }
 
 .button-joinus {
@@ -76,6 +76,10 @@
 
   .menu-icon {
     display: block;
+  }
+
+  .nav-link {
+    margin: 20px 0;
   }
 
   .nav-links {
